# TremorMonitor

./: .env.example  .gitignore  NeuroMotion.sln  README.md  env-example.txt  generate-cert.ps1  security_analysis.md
.github/workflows/: build.yml
NeuroMotion/: ApplicationDbContext.cs  LoginRequest.cs  MQTTClient.cs  MySQLHelper.cs  NeuroMotion.csproj  NeuroMotion.sln  Program.cs  RegisterRequest.cs
NeuroMotion API/: ApplicationDbContext.cs  NeuroMotion API.csproj  NeuroMotion API.http  Program.cs  UserController.cs  WeatherForecast.cs  appsettings.json
NeuroMotion API/Controllers/: CryptoController.cs  SensorDataController.cs  UserController.cs  WeatherForecast.cs  WeatherForecastController.cs
NeuroMotion API/Models/: LoginRequest.cs  RegisterRequest.cs  (+2 more)
NeuroMotionAPITests/: NeuroMotionAPITests.csproj  Test1.cs  UserControllerTests.cs
NeuroMotionDemo/: NeuroMotionDemo.csproj  NeuroMotionDemo.sln  Program.cs  appsettings.json
NeuroMotion_Front/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
NeuroMotion_Pi/: .gitignore  README.md  config.py  dashboard-client.pfx  main.py  output.txt  pyproject.toml  python-bom.xml
NeuroMotion_Pi/.testsbom/: pyvenv.cfg
NeuroMotion_Pi/certs/: dashboard-client.crt  dashboard-client.key
NeuroMotion_Pi/certs.old/: dashboard-client.key
NeuroMotion_Pi/src/: config.py
NeuroMotion_Pi/src/processing/: features.py  filters.py
NeuroMotion_Pi/src/sensors/: adxl345.py  base.py
NeuroMotion_Pi/src/transport/: data_service.py  mqtt_data_service.py
(+51 files in other folders)
